--- a/config.toml
+++ b/config.toml
@@ -4,14 +4,21 @@
 # | |  _ / _ \| |_ / _ \ __/ __| '_ \| | \ \ / / | | | | | || |
 # | |_| | (_) |  _|  __/ || (__| | | |_|  \ V /| |_| | |_| || |
 #  \____|\___/|_|  \___|\__\___|_| |_(_)   \_/  \___(_)___(_)_|
+#===============================================================
 
 [VISUALS]
+# If USERATHOSTNAME is true will show "YOUR_USERNAME @ YOUR_HOSTNAME"
 USERATHOSTNAME = true
+# If SEPARATOR is set to false, no separator will be drawn
 SEPARATOR = true
+# CUSTOM_SEPARATOR is intended to take in only one character but can support more, experiment if you'd like
+# Too many characters will wrap to the next line
+# leave empty string for default "------------------------"
 CUSTOM_SEPARATOR = "~"
 # If setting your own custom ascii art it is recommended that they are 40 characters wide
 CUSTOM_ART = false
-CUSTOM_ASCII_ART = ""
+# for use of CUSTOM_ASCII_ART wrap ascii art in '''''' so the new-lines can be preserved
+CUSTOM_ASCII_ART = ''''''
 
 [SOFTWARE]
 OS = true
@@ -27,7 +34,7 @@ DISKUSED = false
 
 [INFO]
 UPTIME = true
-# Setting packages to true will significantly slow down the program
+# Setting PACKAGES to true will significantly slow down the program, especially on Windows
 PACKAGES = true
 RESOLUTION = false
 
