set resoltion to true to test new functionality

--- a/config.toml
+++ b/config.toml
@@ -36,6 +36,6 @@ DISKUSED = false
 UPTIME = true
 # Setting PACKAGES to true will significantly slow down the program, especially on Windows
 PACKAGES = true
-RESOLUTION = false
+RESOLUTION = true
 
 
